[package]
name = "lemotests-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.96"
quote = "1.0.18"
proc-macro2 = "1.0.39"
thiserror = "1.0.31"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
lemotests = { path = "../lemotests" }