[package]
name = "lemotests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["macros", "fs", "once_cell"] }
anyhow = "1.0.57"
thiserror = "1.0.31"
futures = "0.3.19"
futures-util = "0.3.19"
workspaces = { git = "https://github.com/near/workspaces-rs", features = ["unstable"] }
token_metadata_ext = { path = "../../battlemon_contracts/token_metadata_ext" }
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
nft_models = { path = "../../battlemon_contracts/nft_models" }
near-units = "0.2.0"
serde_json = "1.0.81"