[package]
name = "lemotests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["macros", "fs", "once_cell"] }
anyhow = "1.0.57"
thiserror = "1.0.31"
workspaces = { git = "https://github.com/near/workspaces-rs" }
serde_json = "1.0.81"
serde = { version = "1.0.137" , features = ["derive"] }